change 404 template text

--- a/py-mgr/static/404.html
+++ b/py-mgr/static/404.html
@@ -6,6 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>This is not where I parked my car</div>
+        <div><h1>404</h1><p>Page not found</p></div>
     </body>
 </html>
