--- a/py-mgr/static/index.html
+++ b/py-mgr/static/index.html
@@ -7,5 +7,11 @@
     </head>
     <body>
         <h1>Data Lab. Manage data labels.</h1>
+        <div>
+            <h2>Actions</h2>
+            <ul>
+                <li><a href="/add.html">Add datapoint/label</a></li>
+            </ul>
+        </div>
     </body>
 </html>
