--- a/py-mgr/static/add.html
+++ b/py-mgr/static/add.html
@@ -15,7 +15,12 @@
                 <label>Category 3<input type="text" name="cat3"></label>
                 <button type="submit">Add</button>
             </form>
-            
+           
+            <h1>Add new label</h1>
+            <form action="/label_add" method="get">
+                <label>Label <input type="text" name="label"></label>
+                <button type="submit">Add</button>
+            </form>
         </div>
     </body>
 </html>
