add download-generating link

--- a/py-mgr/static/index.html
+++ b/py-mgr/static/index.html
@@ -16,6 +16,7 @@
             <h2>Actions</h2>
             <ul>
                 <li><a href="/add.html">Add datapoint/label</a></li>
+                <li><a href="/download">Download datapoints with first label</a></li>
             </ul>
         </div>
 
